影片前后切换动画

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -322,7 +322,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="动画变化2"
+                android:text="动画变化-改变宽高"
                 android:textColor="@color/black"
                 android:textSize="14sp"
                 app:backgroundTint="#ffffff"
@@ -334,6 +334,71 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/btnAnimator"
+                tools:icon="@drawable/icon_cell_like"
+                tools:iconTint="@color/color_3d3"
+                tools:textColor="@color/color_3d3" />
+
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnAnimator3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="动画变化-缩放宽高"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                app:backgroundTint="#ffffff"
+                app:cornerRadius="0dp"
+                app:icon="@drawable/icon_cell_like"
+                app:iconGravity="textStart"
+                app:iconPadding="4dp"
+                app:iconTint="@color/color_theme"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/btnAnimator2"
+                tools:icon="@drawable/icon_cell_like"
+                tools:iconTint="@color/color_3d3"
+                tools:textColor="@color/color_3d3" />
+
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnAnimator4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="动画变化-缩放宽高3张"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                app:backgroundTint="#ffffff"
+                app:cornerRadius="0dp"
+                app:icon="@drawable/icon_cell_like"
+                app:iconGravity="textStart"
+                app:iconPadding="4dp"
+                app:iconTint="@color/color_theme"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/btnAnimator3"
+                tools:icon="@drawable/icon_cell_like"
+                tools:iconTint="@color/color_3d3"
+                tools:textColor="@color/color_3d3" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnAnimator5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="动画变化-缩放宽高3张 other"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                app:backgroundTint="#ffffff"
+                app:cornerRadius="0dp"
+                app:icon="@drawable/icon_cell_like"
+                app:iconGravity="textStart"
+                app:iconPadding="4dp"
+                app:iconTint="@color/color_theme"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/btnAnimator4"
                 tools:icon="@drawable/icon_cell_like"
                 tools:iconTint="@color/color_3d3"
                 tools:textColor="@color/color_3d3" />
