--- a/app/src/main/res/layout/activity_animator_total.xml
+++ b/app/src/main/res/layout/activity_animator_total.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:background="@drawable/maoyan_shape_diamond_label"
+        android:background="@drawable/bg_tips"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -20,14 +20,18 @@
             android:id="@+id/tvScore"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|center_horizontal"
-            android:padding="6dp"
+            android:layout_gravity="center"
+            android:includeFontPadding="false"
             android:textStyle="bold"
-            android:text="积分"
+            android:text="积分对"
             android:textColor="@color/colorAccent"
             android:textSize="24sp" />
 
     </FrameLayout>
+    
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
