--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="maoyan_common_shadow_layout_dp_5">5dp</dimen>
     <dimen name="maoyan_common_shadow_layout_dp_15">15dp</dimen>
     <dimen name="maoyan_common_shadow_layout_dp_0">0dp</dimen>
+    <dimen name="recycler_view_item_space">200dp</dimen>
 </resources>
