--- a/app/src/main/res/layout/activity_animator_ui_three_scale_other.xml
+++ b/app/src/main/res/layout/activity_animator_ui_three_scale_other.xml
@@ -52,4 +52,26 @@
     </FrameLayout>
 
 
+
+    <ImageView
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fl"
+        android:layout_marginTop="10dp"
+        android:id="@+id/ivCover"
+        android:scaleType="centerCrop"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"/>
+
+
+    <ImageView
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fl"
+        android:layout_marginTop="10dp"
+        android:id="@+id/ivCover1"
+        android:scaleType="centerCrop"
+        android:layout_width="200dp"
+        android:layout_height="200dp"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
