阿里方式的 多海报方式

--- a/app/src/main/res/layout/activity_animator_ui_three_scale_other.xml
+++ b/app/src/main/res/layout/activity_animator_ui_three_scale_other.xml
@@ -74,4 +74,37 @@
         android:layout_width="200dp"
         android:layout_height="200dp"/>
 
+
+    <ImageView
+        android:id="@+id/ivCover2"
+        android:layout_width="106dp"
+        android:layout_height="152dp"
+        android:layout_marginTop="10dp"
+        android:scaleType="centerCrop"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ivCover1" />
+
+
+    <ImageView
+        android:id="@+id/ivCover3"
+        android:layout_width="106dp"
+        android:layout_height="152dp"
+        android:layout_marginTop="10dp"
+        android:scaleType="centerCrop"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ivCover1" />
+
+
+    <ImageView
+        android:id="@+id/ivCover4"
+        android:layout_width="106dp"
+        android:layout_height="152dp"
+        android:layout_marginTop="10dp"
+        android:scaleType="centerCrop"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ivCover1" />
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
