--- a/app/src/main/res/layout/activity_one.xml
+++ b/app/src/main/res/layout/activity_one.xml
@@ -46,6 +46,14 @@
         android:scaleType="centerCrop" />
 
 
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:maxLines="2"
+        app:layout_constraintTop_toBottomOf="@+id/ivCover2" />
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
